--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             placeholder=""></textarea>
             
          
-          <label for="productdescription">productdescription</label>
+          <label for="productdescription">Productdescription</label>
         </div>
         <div class="form-floating mb-3">
             <input
@@ -69,7 +69,7 @@
               id="productimge"
               placeholder=""
             />
-            <label for="productimge">productimge</label>
+            <label for="productimge">Productimge</label>
           </div>
           <div>
             <button onclick="Addproduct()" class="btn btn-primary btn-sm my-2">Addproduct</button>
