Change label text from 'product Name' to 'product name'

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             id="productName"
             placeholder=""
           />
-          <label for="productName">product Name</label>
+          <label for="productName">product name</label>
         </div>
         <div class="form-floating mb-3">
           <input
